--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <ul class="navbar-list">
 
                     <li class="navbar-item">
-                        <button class="navbar-link active" data-nav-link>About</button></button>
+                        <button class="navbar-link" data-nav-link>About</button></button>
                     </li>
 
                     <li class="navbar-item">
@@ -880,7 +880,7 @@
 
             <!-- #BLOG -->
 
-            <article class="blog active" data-page="blog">
+            <article class="blog" data-page="blog">
 
                 <header>
                     <h2 class="h2 article-title">Blog</h2>
@@ -920,6 +920,45 @@
                         </li>
 
                     </ul>
+
+                </section>
+
+            </article>
+
+            <!-- #CONTACT -->
+
+            <article class="contact" data-page="contact">
+
+                <header>
+                    <h2 class="h2 article-title">Contact</h2>
+                </header>
+
+                <section class="mapbox" data-mapbox>
+                    <figure>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.6939205585577!2d77.43797789999999!3d12.863035199999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae472f365fe219%3A0xcae219b3b46324db!2sCHRIST%20(Deemed%20to%20be%20University)%20Bengaluru%20Kengeri%20Campus!5e0!3m2!1sen!2sin!4v1723151377142!5m2!1sen!2sin" width="400" height="300" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </figure>
+                </section>
+
+                <section class="contact-form">
+
+                    <h3 class="h3 form-title">Contact Form</h3>
+
+                    <form action="#" class="form" data-form>
+
+                        <div class="input-wrapper">
+                            <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+
+                            <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+                        </div>
+
+                        <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+
+                        <button class="form-btn" type="submit" disabled>
+                            <ion-icon name="paper-plane"></ion-icon>
+                            <span>Send Message</span>
+                        </button>
+
+                    </form>
 
                 </section>
 
